src/objects/Holiday__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Holiday</relationshipLabel>
        <relationshipName>Holiday</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Complete_Week_Starts_From__c</fullName>
        <formula>IF(
     How_many_compelete_week_holiday__c = 0,
     null,
     IF(
        Start_Date__c = (Start_Date_WeekEndDate__c - 6),
        Start_Date__c ,
        Start_Date_WeekEndDate__c + 1
     )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Complete Week Starts From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Date_WeekEndDate__c</fullName>
        <formula>End_Date__c - (CASE(MOD( End_Date__c - DATE(1900, 1, 6), 7), 0, 
5, 1, 
6, 2, 
0, 3, 
1, 4, 
2, 5, 
3, 6, 
4,7)) + 6</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Date WeekEndDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>How_many_compelete_week_holiday__c</fullName>
        <formula>IF(
    AND(
        Start_Date__c = Start_Date_WeekEndDate__c - 6,
        End_Date__c &gt;= Start_Date_WeekEndDate__c
    ),
    ( End_Date__c - Start_Date__c + 1) / 7 ,
    IF(
       AND(
           End_Date__c &gt;= (Start_Date_WeekEndDate__c + 1),
           End_Date__c = End_Date_WeekEndDate__c
       ),
       ( End_Date__c - (Start_Date_WeekEndDate__c+1) + 1) / 7 ,
       IF(
          AND(
              End_Date__c &gt;= (Start_Date_WeekEndDate__c + 1),
              End_Date__c &lt;&gt; End_Date_WeekEndDate__c
          ),
          ( (End_Date_WeekEndDate__c - 6) - (Start_Date_WeekEndDate__c+1) + 1) / 7 ,
          0
       )
    )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>How many compelete week holiday</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Start_Date_WeekEndDate__c</fullName>
        <formula>Start_Date__c - (CASE(MOD( Start_Date__c - DATE(1900, 1, 6), 7), 0, 
5, 1, 
6, 2, 
0, 3, 
1, 4, 
2, 5, 
3, 6, 
4,7)) + 6</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start Date WeekEndDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Vacancy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vacancy</label>
        <referenceTo>TR1__Job__c</referenceTo>
        <relationshipLabel>Holiday</relationshipLabel>
        <relationshipName>Holiday</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Holiday</label>
    <nameField>
        <label>Holiday Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Holiday</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>